--- a/resume_styles.css
+++ b/resume_styles.css
@@ -26,3 +26,13 @@ div.flex
 {
     display: flex;
 }
+a
+{
+    text-decoration: none;
+    color: blue;
+}
+a:hover
+{
+    color: red;
+    text-decoration: underline;
+}
