--- a/indexstyles.css
+++ b/indexstyles.css
@@ -1,3 +1,30 @@
+body
+{
+   background-image: url(https://wallpaperaccess.com/full/656336.png); 
+   background-repeat: no-repeat;
+   background-size: cover;
+}
+header
+{
+    display: flex;
+    justify-content: space-evenly;
+
+    flex-wrap: wrap; /*wrapping for small screens eg. phones*/
+
+    background-color: lightcoral;
+}
+header a
+{
+    font-weight: 700;
+    font-size: 32px;
+    padding: 3%;
+    color: white;
+}
+header a:hover
+{
+    text-decoration: none;
+    color: peachpuff;
+}
 a
 {
     text-decoration: none;
@@ -8,12 +35,90 @@ a:hover
     text-decoration: underline;
     color: red;
 }
-body
-{
-    text-align: center;
-    font-size: 100px;
-}
 ::selection
 {
     background-color: #fcbf49;
+}
+h1
+{
+    text-align: center;
+    font-size: 50px;
+    color: #001219;
+
+    width: 100%;
+    height: 100px;
+    margin: auto;
+
+    background-color: #a3c4f3;
+}
+p img#intro_pic
+{
+    display: block;
+    width: 75%;
+    height: 800px;
+    object-fit: cover; /*for cropping image*/
+    margin: auto;
+}
+p.left
+{
+    color: #ffbe0b;
+    font-size: 35px;
+
+    position: relative;
+    width: fit-content;
+    bottom: 450px;
+    left: 250px;
+
+    background-color: rgba(108, 117, 125, 0.8);
+}
+div.info
+{
+    display: flex;
+}
+p.topic
+{
+    text-align: center;
+
+    font-size: 32px;
+    font-weight: 700;
+    width: 50%;
+
+    position: relative;
+    top: 180px;
+    left: 250px;
+}
+p.details
+{
+    font-size: 24px;
+
+    text-align: left;
+    margin-left: 30%;
+    margin-right: 10%;
+    padding: 100px;
+
+    width: 110%;
+    height: 50%;
+
+    background-color: #0077b6;
+
+    box-sizing: border-box;
+    border: #fcbf49;
+    border-top-right-radius: 50%;
+    border-bottom-left-radius: 50%;
+}
+footer
+{
+    display: flex;
+    justify-content: space-between;
+
+    flex-wrap: wrap; /*wrapping for small screens eg. phones*/
+
+    height: 300px;
+}
+footer a img
+{
+    width: 40px;
+    position: absolute;
+    bottom: -1200px;
+    left: 10px;
 }
