--- a/indexstyles.css
+++ b/indexstyles.css
@@ -1,13 +1,15 @@
+* { margin: 0; padding: 0; }
 body
 {
    background-image: url(https://wallpaperaccess.com/full/656336.png); 
    background-repeat: no-repeat;
    background-size: cover;
+   flex-wrap: wrap;
 }
 header
 {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
 
     flex-wrap: wrap; /*wrapping for small screens eg. phones*/
 
@@ -20,10 +22,22 @@ header a
     padding: 3%;
     color: white;
 }
+header a.current
+{
+    color: peachpuff;
+    font-size: 32px;
+}
 header a:hover
 {
     text-decoration: none;
     color: peachpuff;
+    /*
+    border: 1px solid peachpuff;
+    border-radius: 10%;
+    box-sizing: border-box;
+    */
+    font-size: 33px;
+    transform: scale(1.2);
 }
 a
 {
@@ -48,8 +62,6 @@ h1
     width: 100%;
     height: 100px;
     margin: auto;
-
-    background-color: #a3c4f3;
 }
 p img#intro_pic
 {
@@ -109,7 +121,6 @@ p.details
 footer
 {
     display: flex;
-    justify-content: space-between;
 
     flex-wrap: wrap; /*wrapping for small screens eg. phones*/
 
@@ -118,7 +129,11 @@ footer
 footer a img
 {
     width: 40px;
-    position: absolute;
-    bottom: -1200px;
+    position: relative;
+    bottom: -240px;
     left: 10px;
+}
+.margin
+{
+    margin-top: 20px;
 }
