--- a/indexstyles.css
+++ b/indexstyles.css
@@ -1,10 +1,11 @@
-* { margin: 0; padding: 0; }
+* { margin: 0; padding: 0; box-sizing: border-box;}
 body
 {
    background-image: url(https://wallpaperaccess.com/full/656336.png); 
    background-repeat: no-repeat;
    background-size: cover;
    flex-wrap: wrap;
+   font-family: 'Times New Roman', Times, serif;
 }
 header
 {
@@ -60,7 +61,6 @@ h1
     color: #001219;
 
     width: 100%;
-    height: 100px;
     margin: auto;
 }
 p img#intro_pic
@@ -86,12 +86,13 @@ p.left
 div.info
 {
     display: flex;
+    margin-top: 50px;
 }
 p.topic
 {
     text-align: center;
 
-    font-size: 32px;
+    font-size: 50px;
     font-weight: 700;
     width: 50%;
 
@@ -135,5 +136,9 @@ footer a img
 }
 .margin
 {
-    margin-top: 20px;
+    margin-top: 50px;
+}
+h2
+{
+    margin-top: 50px;
 }
