--- a/contactstyles.css
+++ b/contactstyles.css
@@ -11,7 +11,6 @@ body
 {
     background-color: #fcbf49;
 }
-
 /* HEADER STYLES*/
 header
 {
@@ -86,124 +85,17 @@ a.main:active{
     background-color: coral;
 }
 /* end of header stuff*/
-
-h1
-{
-    text-align: center;
-    font-size: 50px;
-    color: #001219;
-
-    width: 100%;
-    margin: auto;
-}
-p img#intro_pic
-{
-    display: block;
-    width: 75%;
-    height: 800px;
-    object-fit: cover; /*for cropping image*/
-    margin: auto;
-}
-p.left
-{
-    color: #ffbe0b;
-    font-size: 35px;
-
-    position: relative;
-    width: fit-content;
-    bottom: 450px;
-    left: 250px;
-
-    background-color: rgba(108, 117, 125, 0.8);
-}
-div.info
-{
-    display: flex;
-    margin-top: 50px;
-}
-p.topic
-{
-    text-align: center;
-
-    font-size: 50px;
-    font-weight: 700;
-    width: 50%;
-
-    position: relative;
-    top: 180px;
-    left: 250px;
-}
-p.details
-{
-    font-size: 24px;
-
+.eform{
     text-align: left;
-    margin-left: 30%;
-    margin-right: 10%;
-    padding: 100px;
 
-    width: 110%;
-    height: 50%;
-
-    background-color: rgba(0, 77, 102, 0.5);
-
-    box-sizing: border-box;
-    border: 1px solid #fcbf49;
-    border-top-right-radius: 50%;
-    border-bottom-left-radius: 50%;
+    background-color: rgba(221, 221, 221, 0.5);
+    width: fit-content;
+    margin: auto;
+    margin-top: 100px;
+    padding: 30px;
 }
-footer
-{
+form button{
     margin-top: 20px;
-    background-color: rgba(0, 0, 0, 0.3);
-}
-footer a img
-{
-    width: 40px;
-    position: relative;
-    bottom: 15px;
-    left: 10px;
-}
-footer p
-{
-    margin-left: 80%;
-    position: relative;
-    bottom: 0px;
-    right: 0px;
-    width: fit-content;
-}
-.margin
-{
-    margin-top: 50px;
-}
-h2
-{
-    margin-top: 50px;
-    margin-left: 150px;
-    text-decoration: underline;
-    width: fit-content;
-    padding: 20px;
-    background-color: rgba(250, 235, 215, 0.5);
-    color: chocolate;
-}
-p.info_text
-{
-    text-align: center;
-    font-size: 24px;
-    font-weight: 100;
-
-    border: 1px solid #fcbf49;
-    background-color: rgba(200, 220, 250, 0.3);
-    width: 800px; 
-    padding: 50px;
-    margin: auto;
-    
-    margin-top: 100px;
-}
-img.interest_pic
-{
-    display: block;
-    margin: auto;
-    margin-top: 100px;
-    width: 1000px;
+    padding: 5px 20px;
+    background-color: transparent;
 }
