--- a/indexstyles.css
+++ b/indexstyles.css
@@ -4,7 +4,6 @@ body
    background-image: url(https://wallpaperaccess.com/full/656336.png); 
    background-repeat: no-repeat;
    background-size: cover;
-   flex-wrap: wrap;
    font-family: 'Times New Roman', Times, serif;
 }
 ::selection
@@ -19,8 +18,6 @@ header
     justify-content: space-around;
     width: 80%; /*to use up more of the center space*/
     margin: auto; /*re-center it*/
-
-    flex-wrap: wrap; /*wrapping for small screens eg. phones*/
 
     background-color: lightcoral;
     height: 15vh;
@@ -86,6 +83,19 @@ a.main:active{
     background-color: coral;
 }
 /* end of header stuff*/
+/*back to top button*/
+button.btt{
+    position: fixed;
+    right: 20px;
+    bottom: 20px;
+    padding: 5px;
+    background-color: rgba(49, 50, 49, 0.8);
+}
+button.btt a{
+    text-decoration: none;
+    color: white;
+}
+/*end of back to top button*/
 
 h1
 {
