--- a/resume_styles.css
+++ b/resume_styles.css
@@ -119,3 +119,11 @@ body
    background-size: cover;*/
    background-color: lightgray;
 }
+a.hlink {
+    color: blue;
+    text-decoration: none;
+}
+a.hlink:hover {
+    color: red;
+    text-decoration: underline;
+}
