--- a/indexstyles.css
+++ b/indexstyles.css
@@ -107,6 +107,8 @@ button.btt{
 
     border: 1px solid black;
     border-radius: 20%;
+
+    transition: all 0.2s;
 }
 button.btt:hover {
     transform: translateY(-1px);
