--- a/indexstyles.css
+++ b/indexstyles.css
@@ -131,6 +131,7 @@ h1
     text-align: center;
     font-size: 50px;
     padding: 1em;
+    font-weight: 900;
 
     width: 100%;
     margin: auto;
