--- a/projects/games/arrow_game/ag.css
+++ b/projects/games/arrow_game/ag.css
@@ -107,7 +107,7 @@ body {
     font-size: 1.3em;
     position: absolute;
     bottom: 5%;
-    right: 45%;
+    right: 45vw;
 }
 .highscore {
     padding: .3em 0em;
@@ -118,9 +118,41 @@ body {
     margin: auto;
     padding-top: 1em;
 }
-@media (max-width: 500px) {
+.flex {
+    display: flex;
+}
+div#keypad.hide {
+    display: none;
+}
+#keypad {
+    position: absolute;
+    bottom: 3vh;
+    left: 12.5vw;
+
+    display: flex;
+    justify-content: center;
+}
+.keyBtn {
+    width: 25vw;
+    height: 9vh;
+    font-size: 2em;
+}
+#up {
+    position: absolute;
+    bottom: 9vh;
+}
+@media (max-width: 821px) {
     #command {
-        font-size: 1.5em;
-        margin-top: 0em;
+        font-size: 1.7em;
+        margin-top: 10vh;
+    }
+    .info {
+        font-size: .8em;
+    }
+    .container {
+        top: 40%;
+    }
+    .score {
+        left: 30vw;
     }
 }
