--- a/projects/games/arrow_game/ag.css
+++ b/projects/games/arrow_game/ag.css
@@ -26,6 +26,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+    box-sizing: border-box;
 }
 ol, ul {
 	list-style: none;
@@ -56,7 +57,7 @@ h1 {
     background-color: #a8dadc;
     border: 1px solid black;
     width: 1000px;
-    max-width: 100%;
+    max-width: 97%;
     height: 500px;
 
     position: fixed;
@@ -107,7 +108,7 @@ body {
     font-size: 1.3em;
     position: absolute;
     bottom: 5%;
-    right: 45vw;
+    left: 25vw;
 }
 .highscore {
     padding: .3em 0em;
@@ -136,6 +137,9 @@ div#keypad.hide {
     width: 25vw;
     height: 9vh;
     font-size: 2em;
+    font-weight: 900;
+    border-radius: 10px;
+    background-color: #ccc;
 }
 #up {
     position: absolute;
@@ -151,8 +155,9 @@ div#keypad.hide {
     }
     .container {
         top: 40%;
+        border-radius: 10px;
     }
     .score {
-        left: 30vw;
+        left: 10vw;
     }
 }
