--- a/website/indexstyles.css
+++ b/website/indexstyles.css
@@ -302,6 +302,7 @@ p.tskill {
     max-width: 100%;
 }
 .project {
+    font-size: 1.2em;
     border: 1px solid #ffbe0b;
     width: 100%;
     padding: 3.125em;
@@ -347,6 +348,9 @@ a {
 a:hover {
     text-decoration: underline;
     color: red;
+}
+code {
+    background-color: #3c3942;
 }
 
 /*responsive restructuring*/
@@ -424,6 +428,7 @@ a:hover {
         margin-top: 2em;
     }
     h1 {
+        max-width: 100%;
         font-size: 2.2em;
         letter-spacing: .2em !important;
     }
